--- a/index.html
+++ b/index.html
@@ -308,16 +308,17 @@
             font-size: 50px;
             pointer-events: none;
             z-index: 999;
+            transform: translate(-50%, -50%);
             animation: game2-boom-grow 0.5s ease-out forwards;
         }
 
         @keyframes game2-boom-grow {
             0% {
-                transform: scale(1);
+                transform: translate(-50%, -50%) scale(1);
                 opacity: 1;
             }
             100% {
-                transform: scale(3);
+                transform: translate(-50%, -50%) scale(3);
                 opacity: 0;
             }
         }
@@ -1556,16 +1557,22 @@
                     showGame2Result(timeTaken);
                 }
             } else {
-                showGame2Boom(e.clientX, e.clientY);
+                showGame2Boom(e.target);
             }
         }
 
-        function showGame2Boom(x, y) {
+        function showGame2Boom(targetElement) {
             const boom = document.createElement('div');
             boom.className = 'game2-boom';
             boom.textContent = '💥';
-            boom.style.left = x + 'px';
-            boom.style.top = y + 'px';
+
+            // Get the center of the clicked emoji element
+            const rect = targetElement.getBoundingClientRect();
+            const centerX = rect.left + rect.width / 2;
+            const centerY = rect.top + rect.height / 2;
+
+            boom.style.left = centerX + 'px';
+            boom.style.top = centerY + 'px';
             document.body.appendChild(boom);
 
             setTimeout(() => {
